--- a/CFMMCD/Views/Account/EditAccess.cshtml
+++ b/CFMMCD/Views/Account/EditAccess.cshtml
@@ -171,6 +171,11 @@
             <div class="container-fluid">
                 <input type="search" class="form-control" id="SearchFrontEnd" placeholder="Search user" autofocus />
             </div>
+
+            <hr />
+            <div class="container-fluid text-center">
+                <div class="col-lg-4">Username</div>
+            </div>
         </div>
         @using (Html.BeginForm("EditAccess", "Account", FormMethod.Post, new { }))
         {
