--- a/CFMMCD/Views/McCafeLevel3PriceTier/Index.cshtml
+++ b/CFMMCD/Views/McCafeLevel3PriceTier/Index.cshtml
@@ -2,7 +2,7 @@
 @using CFMMCD.Models.ViewModel;
 
 @{
-    ViewBag.Title = "McCafeLevel3 Price Tier";
+    ViewBag.Title = "McCafe Level 3 Price Tier";
     List<McCafeLevel3PriceTierViewModel> ML3List = (List<McCafeLevel3PriceTierViewModel>)ViewData["ModelList"];
 }
 
@@ -67,7 +67,7 @@
                     </tbody>
                 </table>
                 <!--Right aligned button group-->
-                <div class="right-fixed" align="right">
+                <div class="form-inline bottom float" style="right:50px">
                     <button type="submit" class="btn btn-default" name="command" value="Save">Save</button>
                     <button type="submit" class="btn btn-default" name="command" value="Delete">Delete</button>
                 </div>
