--- a/CFMMCD/Views/VendorMaster/Index.cshtml
+++ b/CFMMCD/Views/VendorMaster/Index.cshtml
@@ -193,6 +193,11 @@
             <div class="container-fluid">
                 <input type="search" class="form-control" id="SearchFrontEnd" placeholder="Search vendor" autofocus />
             </div>
+            <hr />
+            <div class="container-fluid text-center">
+                <div class="col-lg-4">Vendor number</div>
+                <div class="col-lg-8">Vendor name</div>
+            </div>
         </div>
         @using (Html.BeginForm())
         {
