--- a/CFMMCD/Views/Account/EditAccount.cshtml
+++ b/CFMMCD/Views/Account/EditAccount.cshtml
@@ -62,6 +62,10 @@
             <div class="container-fluid">
                 <input type="search" class="form-control" id="SearchFrontEnd" placeholder="Search user" autofocus />
             </div>
+            <hr />
+            <div class="container-fluid text-center">
+                <div class="col-lg-4">Username</div>
+            </div>
         </div>
         @using (Html.BeginForm("EditAccount", "Account", FormMethod.Post, new { } ))
         {
