--- a/CFMMCD/Views/MDSPriceTier/Index.cshtml
+++ b/CFMMCD/Views/MDSPriceTier/Index.cshtml
@@ -67,7 +67,7 @@
                     </tbody>
                 </table>
                 <!--Right aligned button group-->
-                <div class="right-fixed" align="right">
+                <div class="form-inline bottom float" style="right:50px">
                     <button type="submit" class="btn btn-default" name="command" value="Save">Save</button>
                     <button type="submit" class="btn btn-default" name="command" value="Delete">Delete</button>
                 </div>
