--- a/CFMMCD/Views/Ownership/Index.cshtml
+++ b/CFMMCD/Views/Ownership/Index.cshtml
@@ -18,7 +18,7 @@
         <div class="alert alert-success alert-dismissable fade in">@TempData["SuccessMessage"]<button class="close" data-dismiss="alert" aria-label="close">&times;</button></div>
     }
 </div>
-<div class="form-horizontal">
+<div class="form-horizontal ">
     @using (Html.BeginForm("UpdateDelete", "Ownership", FormMethod.Post, new { }))
     {
         <div class="container-fluid">
@@ -68,7 +68,7 @@
                     </tbody>
                 </table>
                 <!--Right aligned button group-->
-                <div class="right-fixed" align="right">
+                <div class="form-inline bottom float" style="right:50px">
                     <button type="submit" class="btn btn-default" name="command" value="Save">Save</button>
                     <button type="submit" class="btn btn-default" name="command" value="Delete">Delete</button>
                 </div>
