--- a/CFMMCD/Views/SCMRecipe/Index.cshtml
+++ b/CFMMCD/Views/SCMRecipe/Index.cshtml
@@ -121,6 +121,11 @@
             <div class="container-fluid">
                 <input type="search" class="form-control" id="SearchFrontEnd" placeholder="Search value meal" autofocus />
             </div>
+            <hr />
+            <div class="container-fluid text-center">
+                <div class="col-lg-4">Menu item code</div>
+                <div class="col-lg-8">Menu item name</div>
+            </div>
         </div>
         <div class="modal-body">
             @for (int i = 0; i < Model.AllRawItems.Count(); i++)
